# mandelbrot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: arguments.hpp  colors.hpp  cuda_backend.hpp  events.hpp  mandelbrot.hpp  mandelmaths.hpp  openmp_backend.hpp  pixel_array.hpp  std_backend.hpp  types.hpp
src/: configuration.h.in  cuda_backend.cu  events.cpp
tests/: tests.cmake
tests/googletest/: CMakeLists.txt  CMakeLists.txt.in
